# duckiefloat_ros

./: .gitmodules  LICENSE  README.md
altitude_control/: CMakeLists.txt  package.xml
altitude_control/src/: altitude_control_node.py
df_description/: CMakeLists.txt  package.xml
df_description/launch/: df_description.launch  start_df_rl.launch
df_description/urdf/: df.urdf
duckiefloat_control/: CMakeLists.txt  package.xml
duckiefloat_control/launch/: base_v1.launch  base_v2.launch  base_v3_fixed_brushless.launch  base_v3_tiltable_brushless.launch  image_cv2.launch  joystick.launch
duckiefloat_control/src/: .camera.py.swo  altitude_control_node.py  autonomous_control_node.py  estop_node.py  image2ad_node.py  image_collect.py  joy_mapper_node.py  lane_follow.py  rgb_set.py  test.py  xbee_estop_node.py
motor_control/: CMakeLists.txt  package.xml
motor_control/src/: control_node_fixed_brushless.py  control_node_tiltable_brushless.py  control_node_tiltable_brushless_original.py  control_node_v1.py  control_node_v2.py  motor_hat_driver.py
sensors/: README.md
sensors/ir_height/: CMakeLists.txt  package.xml
sensors/ir_height/launch/: sensor.launch
sensors/ir_height/src/: current_node.py  height_node.py  voltage_node.py
sensors/picamera/: CMakeLists.txt  package.xml
subt_rl/: CMakeLists.txt  README.md  package.xml
subt_rl/launch/: denoise_cgan.launch  denoise_cgan_transformer.launch  denoise_vae.launch  goal_rl.launch  goal_rl_anchor_tf.launch  goal_rl_guid.launch  goal_rl_guid_tf.launch  goal_rl_locobot.launch  goal_rl_sound_tf.launch  goal_rl_test.launch  goal_rl_tf.launch  goal_rl_tf_df.launch  goal_rl_tf_radar.launch  pcToLaser_240.launch  rdpg_tf_goal.launch  (+13 more)
(+53 files in other folders)
